# RollPitchYaw

./: CMakeLists.txt  README.md
input_data/: 2016-02-11-17-35-23_gyro_acc_measurements.txt  2016-02-11-17-45-07_gyro_acc_measurements.txt
output_data/: 2016-02-11-17-45-07
src/: main.cpp  main.hpp
src/AHRS/Common/: CommonAHRS.cpp  CommonAHRS.hpp
src/AHRS/Fusion/: Fusion.h  FusionAhrs.c  FusionAhrs.h  FusionBias.c  FusionBias.h  FusionCalibration.h  FusionTypes.h
src/AHRS/Madgwick/: MadgwickAHRS.cpp  MadgwickAHRS.hpp
src/AHRS/Mahony/: MahonyAHRS.cpp  MahonyAHRS.hpp
